--- a/main-remote.yml
+++ b/main-remote.yml
@@ -5,9 +5,9 @@
     become: true
     become_method: sudo
     become_user: root
-    # pre_tasks:
-    #   - name: Wait 600 seconds for target connection to become reachable/usable
-    #     wait_for_connection:
+    pre_tasks:
+      - name: Wait 600 seconds for target connection to become reachable/usable
+        wait_for_connection:
 
     roles:
       - setup
