--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,45 +4,62 @@ orbs:
   aws-cli: circleci/aws-cli@3.1
 
 jobs:
-  deploy_infra:
-    executor: aws-cli/default
-    working_directory: ~/project
-    steps:
-      - aws-cli/setup:
-          aws-access-key-id: UDACITY_ACCESS
-          aws-secret-access-key: UDACITY_SECRET
-          aws-region: AWS_REGION
-      - checkout
-      - run:
-          name: Deploy Cloudformation stack
-          command: |
-            aws cloudformation deploy --template-file template.yml --parameter-overrides file://template.json --stack-name course3Stack --region us-east-1
+  # deploy_infra:
+  #   executor: aws-cli/default
+  #   working_directory: ~/project
+  #   steps:
+  #     - aws-cli/setup:
+  #         aws-access-key-id: UDACITY_ACCESS
+  #         aws-secret-access-key: UDACITY_SECRET
+  #         aws-region: AWS_REGION
+  #     - checkout
+  #     - run:
+  #         name: Deploy Cloudformation stack
+  #         command: |
+  #           aws cloudformation deploy --template-file template.yml --parameter-overrides file://template.json --stack-name course3Stack --region us-east-1
 
-  configure_infra:
-    docker:
-      - image: python:3.8-alpine3.15
-    working_directory: ~/project
-    steps:
-      - checkout
-      - add_ssh_keys:
-          fingerprints: ["c4:7f:58:83:f1:c3:ec:1e:ad:dd:48:65:1e:21:d3:34"]
-      - run:
-          name: install openssh
-          command: apk add --update openssh
-      - run:
-          name: Install dependencies
-          command: |
-            pwd && ls -a
-            apk add --update ansible
-      - run:
-          name: Configure server
-          command: |
-            ansible-playbook main-remote.yml -i inventory
+  # configure_infra:
+  #   docker:
+  #     - image: python:3.8-alpine3.15
+  #   working_directory: ~/project
+  #   steps:
+  #     - checkout
+  #     - add_ssh_keys:
+  #         fingerprints: ["c4:7f:58:83:f1:c3:ec:1e:ad:dd:48:65:1e:21:d3:34"]
+  #     - run:
+  #         name: install openssh
+  #         command: apk add --update openssh
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           pwd && ls -a
+  #           apk add --update ansible
+  #     - run:
+  #         name: Configure server
+  #         command: |
+  #           ansible-playbook main-remote.yml -i inventory
       
+  run_smoke_tests:
+    docker:
+      - image: alphine:latest
+    steps:
+      - run:
+          name: install curl
+          cmd: apk add --update curl
+      - run:
+          name: run sample test
+          cmd: |
+            curl -s --head "https://blog.udacity.com"
+            then
+              return 0
+            else
+              return 1
+            fi
 workflows:
   workflow-1:
     jobs:
-      - deploy_infra
-      - configure_infra:
-          requires:
-            - deploy_infra
+      # - deploy_infra
+      # - configure_infra:
+      #     requires:
+      #       - deploy_infra
+      - run_smoke_tests
