--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       
   run_smoke_tests:
     docker:
-      - image: alphine:3:14.6
+      - image: alpine:latest
     steps:
       - run:
           name: install curl
