job#4 - fix rollback 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,6 @@ workflows:
       # - configure_infra:
       #     requires:
       #       - deploy_infra
-      - run_smoke_tests
+      - run_smoke_tests:
           requires:
             - deploy_infra
