--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,9 @@ commands:
       - run:
           name: Delete Cloudformation stack
           when: on_fail
-          command: echo "Destroying infrastructure by << parameters.authorName >>"
-      - run:
-          name: Now deleting stack
           command: |
-            aws cloudformation delete-stack --stack-name course3Stack
+            echo "Destroying infrastructure by << parameters.authorName >>"
+            aws cloudformation delete-stack --stack-name course3Stack           
 
 jobs:
   deploy_infra:
