--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,9 +67,9 @@ jobs:
           command: |
             if curl -s --head $TEST_URL
             then
-              return 0
+              exit 0
             else
-              return 1
+              exit 1
             fi
       - destroy_infra
 
