--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,16 +65,13 @@ jobs:
       - run:
           name: Create new bucket
           command: |
-            aws cloudformation deploy --template-file createBucket.yml --parameter-overrides S3BucketName="newBucket-${CIRCLE_WORKFLOW_ID:0:7}" --stack-name createNewBucket-${CIRCLE_WORKFLOW_ID:0:7}
-      - run: aws s3 sync . s3://newBucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
+            aws cloudformation deploy --template-file createBucket.yml --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}" --stack-name createNewBucket-${CIRCLE_WORKFLOW_ID:0:7}
+      - run: aws s3 sync . s3://newbucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
 
   get_last_deployment_id:
-    executor: aws-cli/default
+    docker:
+      - image: amazon/aws-cli
     steps:
-      - aws-cli/setup:
-          aws-access-key-id: UDACITY_ACCESS
-          aws-secret-access-key: UDACITY_SECRET
-          aws-region: AWS_REGION
       - checkout
       - run: yum install -y tar gzip
       - run:
