--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,19 +73,19 @@ jobs:
   #           fi
   #     - destroy_infra
 
-  create_new_bucket:
-    executor: aws-cli/default
-    steps:
-      - aws-cli/setup:
-          aws-access-key-id: UDACITY_ACCESS
-          aws-secret-access-key: UDACITY_SECRET
-          aws-region: AWS_REGION
-      - checkout
-      - run:
-          name: Create new bucket
-          command: |
-            aws cloudformation deploy --template-file createBucket.yml --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}" --stack-name createNewBucket-${CIRCLE_WORKFLOW_ID:0:7}
-      - run: aws s3 sync . s3://newbucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
+  # create_new_bucket:
+  #   executor: aws-cli/default
+  #   steps:
+  #     - aws-cli/setup:
+  #         aws-access-key-id: UDACITY_ACCESS
+  #         aws-secret-access-key: UDACITY_SECRET
+  #         aws-region: AWS_REGION
+  #     - checkout
+  #     - run:
+  #         name: Create new bucket
+  #         command: |
+  #           aws cloudformation deploy --template-file createBucket.yml --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}" --stack-name createNewBucket-${CIRCLE_WORKFLOW_ID:0:7}
+  #     - run: aws s3 sync . s3://newbucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
 
   get_last_deployment_id:
     docker:
@@ -102,15 +102,15 @@ jobs:
           paths: 
             - textfile.txt
 
-  promote_to_production:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run:
-          name: Execute CloudFront template
-          command: |
-            aws cloudformation deploy --template-file createCloudfront.yml --stack-name production-distro --parameter-overrides S3BucketName="newBucket-${CIRCLE_WORKFLOW_ID:0:7}"
+  # promote_to_production:
+  #   docker:
+  #     - image: amazon/aws-cli
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Execute CloudFront template
+  #         command: |
+  #           aws cloudformation deploy --template-file createCloudfront.yml --stack-name production-distro --parameter-overrides S3BucketName="newBucket-${CIRCLE_WORKFLOW_ID:0:7}"
   
   delete_old_bucket:
     docker:
@@ -123,8 +123,11 @@ jobs:
       - run:
           name: Destroy the previous S3 bucket. 
           command: |
+            pwd && ls
+            cat ~/textfile.txt
             export OldBucketID=$(cat ~/textfile.txt)
-            aws s3 rm "s3://${OldBucketID}" --recursive
+
+# aws s3 rm "s3://${OldBucketID}" --recursive
 
 workflows:
   blue-green-workflow:
@@ -141,12 +144,12 @@ workflows:
       #       - deploy_infra
       #       - configure_infra
       
-      - create_new_bucket
+      # - create_new_bucket
       - get_last_deployment_id
-      - promote_to_production:
-          requires: 
-            - create_new_bucket
+      # - promote_to_production:
+      #     requires: 
+      #       - create_new_bucket
       - delete_old_bucket:
           requires:
             - get_last_deployment_id
-            - promote_to_production
+            # - promote_to_production
