last steps 0f blue-green deploy - test last job for error 1

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,7 @@ jobs:
             pwd && ls
             cat ~/textfile.txt
             export OldBucketID=$(cat ~/textfile.txt)
+            echo $OldBucketID
 
 # aws s3 rm "s3://${OldBucketID}" --recursive
 
