last steps 0f blue-green deploy - delete previous bucket stacks

--- a/createBucket.yml
+++ b/createBucket.yml
@@ -30,3 +30,7 @@ Resources:
           Principal: '*'
           Action: s3:GetObject
           Resource: !Join ['', ['arn:aws:s3:::', !Ref 'NewS3Bucket', /*]]
+
+Outputs:
+  StackName:
+    Value: !Ref AWS::StackName
