--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,11 @@ jobs:
           name: Create new bucket
           command: |
             aws cloudformation deploy --template-file createBucket.yml --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}" --stack-name createNewBucket-${CIRCLE_WORKFLOW_ID:0:7}
+            aws cloudformation list-exports --query "Exports[?Name==\`StackName\`].Value" --no-paginate --output text > ~/stackname.txt
+      - persist_to_workspace:
+          root: ~/
+          paths: 
+            - stackname.txt
       - run: aws s3 sync . s3://newbucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
 
   get_last_deployment_id:
@@ -112,7 +117,7 @@ jobs:
           command: |
             aws cloudformation deploy --template-file createCloudfront.yml --stack-name production-distro --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}"
   
-  delete_old_bucket:
+  clean_up_old_deployment:
     docker:
       - image: amazon/aws-cli
     steps:
@@ -121,13 +126,16 @@ jobs:
       - attach_workspace:
           at: ~/
       - run:
-          name: Destroy the previous S3 bucket. 
+          name: Destroy previous S3 bucket
           command: |
-            pwd && ls
-            cat ~/textfile.txt
             OldBucketID=$(cat ~/textfile.txt)
             aws s3 rm "s3://${OldBucketID}" --recursive
             aws s3api delete-bucket --bucket $OldBucketID
+      - run:
+          name: delete previous stack that created the bucket 
+          command: |
+            OldStack=$(cat ~/stackname.txt)
+            aws cloudformation delete-stack --stack-name $OldStack
 
 workflows:
   blue-green-workflow:
