--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,19 +19,19 @@ commands:
             aws cloudformation delete-stack --stack-name stack-$CIRCLE_WORKFLOW_ID           
 
 jobs:
-  # deploy_infra:
-  #   executor: aws-cli/default
-  #   working_directory: ~/project
-  #   steps:
-  #     - aws-cli/setup:
-  #         aws-access-key-id: UDACITY_ACCESS
-  #         aws-secret-access-key: UDACITY_SECRET
-  #         aws-region: AWS_REGION
-  #     - checkout
-  #     - run:
-  #         name: Deploy Cloudformation stack
-  #         command: |
-  #           aws cloudformation deploy --template-file template.yml --parameter-overrides file://template.json --stack-name stack-$CIRCLE_WORKFLOW_ID --region us-east-1
+  deploy_infra:
+    executor: aws-cli/default
+    working_directory: ~/project
+    steps:
+      - aws-cli/setup:
+          aws-access-key-id: UDACITY_ACCESS
+          aws-secret-access-key: UDACITY_SECRET
+          aws-region: AWS_REGION
+      - checkout
+      - run:
+          name: Deploy Cloudformation stack
+          command: |
+            aws cloudformation deploy --template-file template.yml --parameter-overrides file://template.json --stack-name stack-$CIRCLE_WORKFLOW_ID --region us-east-1
 
   # configure_infra:
   #   docker:
@@ -73,77 +73,77 @@ jobs:
   #           fi
   #     - destroy_infra
 
-  create_new_bucket:
-    executor: aws-cli/default
-    steps:
-      - aws-cli/setup:
-          aws-access-key-id: UDACITY_ACCESS
-          aws-secret-access-key: UDACITY_SECRET
-          aws-region: AWS_REGION
-      - checkout
-      - run:
-          name: Create new bucket
-          command: |
-            aws cloudformation deploy --template-file createBucket.yml --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}" --stack-name createNewBucket-${CIRCLE_WORKFLOW_ID:0:7}
-            aws cloudformation list-exports --query "Exports[?Name==\`StackName\`].Value" --no-paginate --output text > ~/stackname.txt
-      - persist_to_workspace:
-          root: ~/
-          paths: 
-            - stackname.txt
-      - run: aws s3 sync . s3://newbucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
+  # create_new_bucket:
+  #   executor: aws-cli/default
+  #   steps:
+  #     - aws-cli/setup:
+  #         aws-access-key-id: UDACITY_ACCESS
+  #         aws-secret-access-key: UDACITY_SECRET
+  #         aws-region: AWS_REGION
+  #     - checkout
+  #     - run:
+  #         name: Create new bucket
+  #         command: |
+  #           aws cloudformation deploy --template-file createBucket.yml --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}" --stack-name createNewBucket-${CIRCLE_WORKFLOW_ID:0:7}
+  #           aws cloudformation list-exports --query "Exports[?Name==\`StackName\`].Value" --no-paginate --output text > ~/stackname.txt
+  #     - persist_to_workspace:
+  #         root: ~/
+  #         paths: 
+  #           - stackname.txt
+  #     - run: aws s3 sync . s3://newbucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
 
-  get_last_deployment_id:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run: yum install -y tar gzip
-      - run:
-          name: Fetch and save the old pipeline ID (bucket name) responsible for the last release.
-          command: |
-            aws cloudformation list-exports --query "Exports[?Name==\`Pipeline-ID\`].Value" --no-paginate --output text > ~/textfile.txt
-      - persist_to_workspace:
-          root: ~/
-          paths: 
-            - textfile.txt
+  # get_last_deployment_id:
+  #   docker:
+  #     - image: amazon/aws-cli
+  #   steps:
+  #     - checkout
+  #     - run: yum install -y tar gzip
+  #     - run:
+  #         name: Fetch and save the old pipeline ID (bucket name) responsible for the last release.
+  #         command: |
+  #           aws cloudformation list-exports --query "Exports[?Name==\`Pipeline-ID\`].Value" --no-paginate --output text > ~/textfile.txt
+  #     - persist_to_workspace:
+  #         root: ~/
+  #         paths: 
+  #           - textfile.txt
 
-  promote_to_production:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run:
-          name: Execute CloudFront template
-          command: |
-            aws cloudformation deploy --template-file createCloudfront.yml --stack-name production-distro --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}"
+  # promote_to_production:
+  #   docker:
+  #     - image: amazon/aws-cli
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Execute CloudFront template
+  #         command: |
+  #           aws cloudformation deploy --template-file createCloudfront.yml --stack-name production-distro --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}"
   
-  clean_up_old_deployment:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run: yum install -y tar gzip
-      - attach_workspace:
-          at: ~/
-      - run:
-          name: Destroy previous S3 bucket
-          command: |
-            OldBucketID=$(cat ~/textfile.txt)
-            aws s3 rm "s3://${OldBucketID}" --recursive
-            aws s3api delete-bucket --bucket $OldBucketID
-      - run:
-          name: delete previous stack that created the bucket 
-          command: |
-            OldStack=$(cat ~/stackname.txt)
-            aws cloudformation delete-stack --stack-name $OldStack
+  # clean_up_old_deployment:
+  #   docker:
+  #     - image: amazon/aws-cli
+  #   steps:
+  #     - checkout
+  #     - run: yum install -y tar gzip
+  #     - attach_workspace:
+  #         at: ~/
+  #     - run:
+  #         name: Destroy previous S3 bucket
+  #         command: |
+  #           OldBucketID=$(cat ~/textfile.txt)
+  #           aws s3 rm "s3://${OldBucketID}" --recursive
+  #           aws s3api delete-bucket --bucket $OldBucketID
+  #     - run:
+  #         name: delete previous stack that created the bucket 
+  #         command: |
+  #           OldStack=$(cat ~/stackname.txt)
+  #           aws cloudformation delete-stack --stack-name $OldStack
 
 workflows:
   blue-green-workflow:
     jobs:
-      # - deploy_infra:
-      #     filters:
-      #       branches:
-      #         only: master
+      - deploy_infra:
+          filters:
+            branches:
+              only: master
       # - configure_infra:
       #     requires:
       #       - deploy_infra
@@ -152,12 +152,12 @@ workflows:
       #       - deploy_infra
       #       - configure_infra
       
-      - create_new_bucket
-      - get_last_deployment_id
-      - promote_to_production:
-          requires: 
-            - create_new_bucket
-      - delete_old_bucket:
-          requires:
-            - get_last_deployment_id
-            - promote_to_production
+      # - create_new_bucket
+      # - get_last_deployment_id
+      # - promote_to_production:
+      #     requires: 
+      #       - create_new_bucket
+      # - clean_up_old_deployment:
+      #     requires:
+      #       - get_last_deployment_id
+      #       - promote_to_production
