--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           name: fetch instance DNS name
           command: |
             echo "[all]" > ~/inventory.txt
-            aws ec2 describe-instances --query "Reservations[*].Instances[*].PublicIpAddress" --filters "Name=tag:name, Values=Course3EC2" --output text >> ~/inventory.txt
+            aws cloudformation list-exports --query "Exports[?Name==\`InstanceDNS\`].Value" --no-paginate --output text >> ~/inventory.txt
       - persist_to_workspace:
           root:  ~/
           paths:
