--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,69 +86,69 @@ jobs:
             fi
       - destroy_infra
 
-  # create_new_bucket:
-  #   executor: aws-cli/default
-  #   steps:
-  #     - aws-cli/setup:
-  #         aws-access-key-id: UDACITY_ACCESS
-  #         aws-secret-access-key: UDACITY_SECRET
-  #         aws-region: AWS_REGION
-  #     - checkout
-  #     - run:
-  #         name: Create new bucket
-  #         command: |
-  #           aws cloudformation deploy --template-file createBucket.yml --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}" --stack-name createNewBucket-${CIRCLE_WORKFLOW_ID:0:7}
-  #           aws cloudformation list-exports --query "Exports[?Name==\`StackName\`].Value" --no-paginate --output text > ~/stackname.txt
-  #     - persist_to_workspace:
-  #         root: ~/
-  #         paths: 
-  #           - stackname.txt
-  #     - run: aws s3 sync . s3://newbucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
+  create_new_bucket:
+    executor: aws-cli/default
+    steps:
+      - aws-cli/setup:
+          aws-access-key-id: UDACITY_ACCESS
+          aws-secret-access-key: UDACITY_SECRET
+          aws-region: AWS_REGION
+      - checkout
+      - run:
+          name: Create new bucket
+          command: |
+            aws cloudformation deploy --template-file createBucket.yml --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}" --stack-name createNewBucket-${CIRCLE_WORKFLOW_ID:0:7}
+            aws cloudformation list-exports --query "Exports[?Name==\`StackName\`].Value" --no-paginate --output text > ~/stackname.txt
+      - persist_to_workspace:
+          root: ~/
+          paths: 
+            - stackname.txt
+      - run: aws s3 sync . s3://newbucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
 
-  # get_last_deployment_id:
-  #   docker:
-  #     - image: amazon/aws-cli
-  #   steps:
-  #     - checkout
-  #     - run: yum install -y tar gzip
-  #     - run:
-  #         name: Fetch and save the old pipeline ID (bucket name) responsible for the last release.
-  #         command: |
-  #           aws cloudformation list-exports --query "Exports[?Name==\`Pipeline-ID\`].Value" --no-paginate --output text > ~/textfile.txt
-  #     - persist_to_workspace:
-  #         root: ~/
-  #         paths: 
-  #           - textfile.txt
+  get_last_deployment_id:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run: yum install -y tar gzip
+      - run:
+          name: Fetch and save the old pipeline ID (bucket name) responsible for the last release.
+          command: |
+            aws cloudformation list-exports --query "Exports[?Name==\`Pipeline-ID\`].Value" --no-paginate --output text > ~/textfile.txt
+      - persist_to_workspace:
+          root: ~/
+          paths: 
+            - textfile.txt
 
-  # promote_to_production:
-  #   docker:
-  #     - image: amazon/aws-cli
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Execute CloudFront template
-  #         command: |
-  #           aws cloudformation deploy --template-file createCloudfront.yml --stack-name production-distro --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}"
+  promote_to_production:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Execute CloudFront template
+          command: |
+            aws cloudformation deploy --template-file createCloudfront.yml --stack-name production-distro --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}"
   
-  # clean_up_old_deployment:
-  #   docker:
-  #     - image: amazon/aws-cli
-  #   steps:
-  #     - checkout
-  #     - run: yum install -y tar gzip
-  #     - attach_workspace:
-  #         at: ~/
-  #     - run:
-  #         name: Destroy previous S3 bucket
-  #         command: |
-  #           OldBucketID=$(cat ~/textfile.txt)
-  #           aws s3 rm "s3://${OldBucketID}" --recursive
-  #           aws s3api delete-bucket --bucket $OldBucketID
-  #     - run:
-  #         name: delete previous stack that created the bucket 
-  #         command: |
-  #           OldStack=$(cat ~/stackname.txt)
-  #           aws cloudformation delete-stack --stack-name $OldStack
+  clean_up_old_deployment:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run: yum install -y tar gzip
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Destroy previous S3 bucket
+          command: |
+            OldBucketID=$(cat ~/textfile.txt)
+            aws s3 rm "s3://${OldBucketID}" --recursive
+            aws s3api delete-bucket --bucket $OldBucketID
+      - run:
+          name: delete previous stack that created the bucket 
+          command: |
+            OldStack=$(cat ~/stackname.txt)
+            aws cloudformation delete-stack --stack-name $OldStack
 
 workflows:
   blue-green-workflow:
@@ -162,15 +162,17 @@ workflows:
             - deploy_infra
       - run_smoke_tests:
           requires:
-            - deploy_infra
+            - configure_infra 
+      - create_new_bucket:
+          requires:
             - configure_infra
-      
-      # - create_new_bucket
-      # - get_last_deployment_id
-      # - promote_to_production:
-      #     requires: 
-      #       - create_new_bucket
-      # - clean_up_old_deployment:
-      #     requires:
-      #       - get_last_deployment_id
-      #       - promote_to_production
+      - get_last_deployment_id:
+          requires:
+            - configure_infra
+      - promote_to_production:
+          requires: 
+            - create_new_bucket
+      - clean_up_old_deployment:
+          requires:
+            - get_last_deployment_id
+            - promote_to_production
