--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,7 +98,7 @@ jobs:
           name: Create new bucket
           command: |
             aws cloudformation deploy --template-file createBucket.yml --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}" --stack-name createNewBucket-${CIRCLE_WORKFLOW_ID:0:7}
-            aws cloudformation list-exports --query "Exports[?Name==\`StackName\`].Value" --no-paginate --output text > ~/stackname.txt
+            aws cloudformation list-exports --query "Exports[?Name==\`StackName\`].Value" --no-paginate --output text >> ~/stackname.txt
       - persist_to_workspace:
           root: ~/
           paths: 
@@ -148,7 +148,7 @@ jobs:
           name: delete previous stack that created the bucket 
           command: |
             OldStack=$(cat ~/stackname.txt)
-            echo $OldStack
+            echo "qwerty -- $OldStack"
             aws cloudformation delete-stack --stack-name $OldStack
 
 workflows:
