--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,7 +98,6 @@ jobs:
           name: Create new bucket
           command: |
             aws cloudformation deploy --template-file createBucket.yml --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}" --stack-name createNewBucket-${CIRCLE_WORKFLOW_ID:0:7}
-            aws cloudformation list-exports --query "Exports[?Name==\`StackName\`].Value" --no-paginate --output text > ~/stackname.txt
       - persist_to_workspace:
           root: ~/
           paths: 
@@ -115,10 +114,12 @@ jobs:
           name: Fetch and save the old pipeline ID (bucket name) responsible for the last release.
           command: |
             aws cloudformation list-exports --query "Exports[?Name==\`Pipeline-ID\`].Value" --no-paginate --output text > ~/textfile.txt
+            aws cloudformation list-exports --query "Exports[?Name==\`Stack-ID\`].Value" --no-paginate --output text > ~/stackfile.txt
       - persist_to_workspace:
           root: ~/
           paths: 
             - textfile.txt
+            - stackfile.txt
 
   promote_to_production:
     docker:
@@ -128,7 +129,7 @@ jobs:
       - run:
           name: Execute CloudFront template
           command: |
-            aws cloudformation deploy --template-file createCloudfront.yml --stack-name production-distro --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}"
+            aws cloudformation deploy --template-file createCloudfront.yml --stack-name production-distro --parameter-overrides S3BucketName="newbucket-${CIRCLE_WORKFLOW_ID:0:7}" StackName="createNewBucket-${CIRCLE_WORKFLOW_ID:0:7}"
   
   clean_up_old_deployment:
     docker:
@@ -147,7 +148,7 @@ jobs:
       - run:
           name: delete previous stack that created the bucket 
           command: |
-            OldStack=$(cat ~/stackname.txt)
+            OldStack=$(cat ~/stackfile.txt)
             echo "qwerty -- $OldStack"
             aws cloudformation delete-stack --stack-name $OldStack
 
